changes to html
Fixed some html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Heather Blackwood's Portfolio</h1>
-						<p>Machine Learning - Data Science<br />
+						<h1>Heather Blackwood</h1>
+						<p>Machine Learning &bull; Data Science<br />
 						</p>
 					</header>
 
