--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>Heather Blackwood</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Heather Blackwood</h1>
-						<p>Machine Learning &bull; Data Science<br />
+						<p>Machine Learning &bull; Data Analysis<br />
 						</p>
 					</header>
 
@@ -30,7 +30,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#first">Projects</a></li>
-							<li><a href="#second">Second Section</a></li>
+							<li><a href="#second">Skills</a></li>
 							<li><a href="#cta">Contact Me</a></li>
 						</ul>
 					</nav>
@@ -64,17 +64,17 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
+										<h3>Project #1</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
+										<h3>Project #2</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
+										<h3>Project #3</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
@@ -88,30 +88,64 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Technical Skills</h2>
+									<p>From coding to researching my novels, my love of learning always <br />
+										drives me. I combine traditional learning through certifications <br />
+										with discovering more through experience and projects. <br />
+									</p>
+									<p><h2>Certifications:</h2></p>
+									<p><b>AI Machine Learning and Data Science</b><br />
+										Zero to Mastery</p><br /><br />
+									<p><b>Python</b><br />
+											Codefinity</p><br /><br />
+									<p><b>SQL</b><br />
+										Codefinity</p><br /><br />
+									<p><b>Data Analysis</b><br />
+										Codefinity</p><br /><br />
+									<p><b>Data Visualization</b><br />
+										Codefinity</p><br /><br />
+									<p><b>Technical Writing</b><br />
+										Ohio University, Athens OH</p><br /><br />
+									<p><b>Agile</b><br />
+										International Institute of Business Analysis (IIBA)</p><br /><br />
+									<p><b>Proposal Writing</b><br />
+										National Association of State Boards of Accountancy (NASBA)</p><br /><br />
+									<p><b>Project Management</b><br />
+										<p><b>Project Management</b><br />
+											Amgen</p><br /><br />
+										<br />
+									<p><h2>Degrees:</h2></p>
+									<p><b>Master of Education</b><br />
+										University of California, Santa Barbara</p><br /><br />
+									<p><b>Bachelor of Literature</b><br />
+										University of California, Santa Cruz</p><br /><br />
+										&bull;Minor in History</p><br /><br />
+											&bull;College Honors</p><br /><br />
+											&bull;Honors in the Major</p><br /><br />
+											
+
+
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<strong>5,120</strong> Machine Learning Engineering
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<strong>8,192</strong> Project Management
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>2,048</strong> Data Analysis
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>4,096</strong> Technical Writing
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<strong>1,024</strong> Learning and Experimentation
 									</li>
 								</ul>
 								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
