--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Heather Blackwood</h1>
-						<p>Machine Learning &bull; Data Analysis<br />
+						<p>Machine Learning  &bull;  Data Analysis &bull; Experimentation<br />
 						</p>
 					</header>
 
@@ -93,34 +93,33 @@
 										with discovering more through experience and projects. <br />
 									</p>
 									<p><h3>Certifications:</h3></p>
-									<p><b>AI Machine Learning and Data Science</b>
+									<p><b>AI Machine Learning and Data Science</b><br />
 										Zero to Mastery</p>
 									<p><b>Python</b><br />
 											Codefinity</p>
 									<p><b>SQL</b><br />
 										Codefinity</p><br />
-									<p><b>Data Analysis</b>
+									<p><b>Data Analysis</b><br />
 										Codefinity</p><br />
-									<p><b>Data Visualization</b>
+									<p><b>Data Visualization</b><br />
 										Codefinity</p><br />
-									<p><b>Technical Writing</b>
+									<p><b>Technical Writing</b><br />
 										Ohio University, Athens OH</p>
 									<p><b>Agile</b><br />
 										International Institute of Business Analysis (IIBA)</p><br /><br />
-									<p><b>Proposal Writing</b>
+									<p><b>Proposal Writing</b><br />
 										National Association of State Boards of Accountancy (NASBA)</p><br /><br />
-									<p><b>Project Management</b>
-										<p><b>Project Management</b>
+									<p><b>Project Management</b><br />
 											Amgen</p><br /><br />
 										<br />
 									<p><h3>Degrees:</h3></p>
 									<p><b>Master of Education</b><br />
 										University of California, Santa Barbara</p>
-									<p><b>Bachelor of Literature</b>
+									<p><b>Bachelor of Literature</b><br />
 										University of California, Santa Cruz</p>
-										&bull;Minor in History</p><br />
-											&bull;College Honors</p><br />
-											&bull;Honors in the Major</p><br />
+										&bull;Minor in History</p>
+											&bull;College Honors</p>
+											&bull;Honors in the Major</p>
 											
 
 
@@ -158,9 +157,8 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Contact Me</h2>
+									<p>Call, text, or email to talk about what I can do for your organization.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
@@ -169,24 +167,36 @@
 								</footer>
 							</section>
 
+							<section>
+								<h2></h2>
+								<dl class="alt">
+									<dt>Address</dt>
+									<dd>Port Orchard, WA &bull; USA</dd>
+									<dt>Phone</dt>
+									<dd>(805) 404-3591</dd>
+									<dt>Email</dt>
+									<dd><a href="#">hmblackwood42@gmail.com</a></dd>
+								</dl>
+								<ul class="icons">
+									<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								</ul>
+							</section>
+
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
 						<section>
 							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>Port Orchard, WA &bull; USA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(805) 404-3591)</dd>
 								<dt>Email</dt>
 								<dd><a href="#">hmblackwood42@gmail.com</a></dd>
 							</dl>
