--- a/index.html
+++ b/index.html
@@ -156,14 +156,28 @@
 								<header class="major">
 									<h2>Contact Me</h2>
 									<p>Call, text, or email to talk about what I can do for your organization.</p>
+
+									<dl class="content">
+										<dt>Address</dt>
+										<dd>Port Orchard, WA &bull; USA</dd>
+										<dt>Phone</dt>
+										<dd>(805) 404-3591</dd>
+										<dt>Email</dt>
+										<dd><a href="#">hmblackwood42@gmail.com</a></dd>
+									</dl>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 								</header>
 												
 																</footer>
 							</section>
 
 							<section>
-								<h2></h2>
-								<dl class="content">
+									<dl class="content">
 									<dt>Address</dt>
 									<dd>Port Orchard, WA &bull; USA</dd>
 									<dt>Phone</dt>
