--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.jpg" alt="" /></span>
 						<h1>Heather Blackwood</h1>
 						<p>Machine Learning  &bull;  Data Analysis &bull; Experimentation<br />
 						</p>
@@ -170,20 +169,10 @@
 
 							<section>
 									<dl class="content">
-									<dt>Address</dt>
-									<dd>Port Orchard, WA &bull; USA</dd>
-									<dt>Phone</dt>
-									<dd>(805) 404-3591</dd>
-									<dt>Email</dt>
-									<dd><a href="#">hmblackwood42@gmail.com</a></dd>
+									<dt>Phone: (805) 404-3591</dd>
+									<dt>Email: hmblackwood42@gmail.com</dd>
 								</dl>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-								</ul>
+								
 							</section>
 
 					</div>
@@ -191,22 +180,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>Port Orchard, WA &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(805) 404-3591)</dd>
-								<dt>Email</dt>
-								<dd><a href="#">hmblackwood42@gmail.com</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
+							
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
