--- a/index.html
+++ b/index.html
@@ -110,11 +110,12 @@
 										National Association of State Boards of Accountancy (NASBA)</p><br />
 									<p><b>Project Management</b><br />
 											Amgen</p><br />
+											<h2> </h2>
 									<p><h3>Degrees:</h3></p>
-									<p><b>Master of Education</b><br />
+									<p><b>Master of Education</b></b><br />
 										University of California, Santa Barbara</p>
 									<p><b>Bachelor of Literature</b><br />
-										University of California, Santa Cruz
+										University of California, Santa Cruz</b>
 										Minor in History &bull; College Honors &bull; Honors in the Major										&bull;Honors in the Major</p>
 											
 
