--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 										drives me. I combine traditional learning through certifications <br />
 										with discovering more through experience and projects. <br />
 									</p>
+									<h2> </h2>
 									<p><h3>Certifications:</h3></p>
 									<p><b>AI Machine Learning and Data Science</b><br />
 										Zero to Mastery</p>
@@ -115,9 +116,9 @@
 									<p><b>Master of Education</b></b><br />
 										University of California, Santa Barbara</p>
 									<p><b>Bachelor of Literature</b><br />
-										University of California, Santa Cruz</b>
+										University of California, Santa Cruz</b><br />
 										Minor in History &bull; College Honors &bull; Honors in the Major										&bull;Honors in the Major</p>
-											
+										<h2> </h2>
 
 
 								</header>
@@ -143,7 +144,6 @@
 										<strong></strong> Learning and Experimentation
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
 										
