--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Heather Blackwood</h1>
-						<p>Machine Learning  &bull;  Data Analysis &bull; Experimentation<br />
+						<p>Machine Learning  &nbsp &bull; &nbsp Data Analysis &nbsp &bull; &nbsp Experimentation<br />
 						</p>
 					</header>
 
@@ -110,7 +110,7 @@
 									<p><b>Proposal Writing</b><br />
 										National Association of State Boards of Accountancy (NASBA)</p><br />
 									<p><b>Project Management</b><br />
-											Amgen</p><br />
+											Amgen</p>
 											<h2> </h2>
 									<p><h3>Degrees:</h3></p>
 									<p><b>Master of Education</b></b><br />
@@ -161,6 +161,7 @@
 									
 										<dt>Phone: (805) 404-3591</dd>
 										<dt>Email: hmblackwood42@gmail.com</a></dd>
+
 									</dl>
 								
 								</header>
