--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										with discovering more through experience and projects. <br />
 									</p>
 									<h2> </h2>
-									<p><h3>Certifications:</h3></p>
+									<p><h3><b>Certifications:</b></h3></p>
 									<p><b>AI Machine Learning and Data Science</b><br />
 										Zero to Mastery</p>
 									<p><b>Python</b><br />
@@ -112,7 +112,7 @@
 									<p><b>Project Management</b><br />
 											Amgen</p>
 											<h2> </h2>
-									<p><h3>Degrees:</h3></p>
+									<p><h3><b>Degrees:</b></h3></p>
 									<p><b>Master of Education</b></b><br />
 										University of California, Santa Barbara</p>
 									<p><b>Bachelor of Literature</b><br />
