--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 										University of California, Santa Barbara</p>
 									<p><b>Bachelor of Literature</b><br />
 										University of California, Santa Cruz</b><br />
-										Minor in History &bull; College Honors &bull; Honors in the Major										&bull;Honors in the Major</p>
-										<h2> </h2>
+										Minor in History &nbsp &bull; &nbsp College Honors &nbsp &bull; &nbsp Honors in the Major
+										
 
 
 								</header>
