--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Project #1</h3>
+										<img src="https://github.com/hmblackwood/hmblackwood.github.io/blob/main/images/Golden%Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
+										<h3>The Good Dog Project</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
