--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
 									
 										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
 										<h3>The Good Dog Project</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project">GitHub Repository</a>
+										<p>Image Classification using:</p>
+										<ul>
+  <li>Tensorflow</li>
+  <li>Keras</li>
+  <li>NumPy</li>
+  <li>Matplotlib</li>
+  <li>Seaborn</li>
+  <li>Pandas</li>
+  <li>Scikit-Learn</li>
+</ul>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
