--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 									
 										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
 										<h3>The Good Dog Project</h3>
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project">GitHub Repository</a>
-										<p>Image Classification using:</p>
-										<ul>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project">Visit GitHub Repository</a>
+										<p>Image Classification using:</p> 									
   <li>Tensorflow</li>
   <li>Keras</li>
   <li>NumPy</li>
@@ -74,7 +73,7 @@
   <li>Seaborn</li>
   <li>Pandas</li>
   <li>Scikit-Learn</li>
-</ul>
+
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
