--- a/index.html
+++ b/index.html
@@ -63,16 +63,10 @@
 									<li>
 									
 										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
-										<h3>The Good Dog Project</h3>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project"><h3>The Good Dog Project</h3></a>a
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project">Visit GitHub Repository</a>
-										<p>Image Classification using:</p> 									
-  <li>Tensorflow</li>
-  <li>Keras</li>
-  <li>NumPy</li>
-  <li>Matplotlib</li>
-  <li>Seaborn</li>
-  <li>Pandas</li>
-  <li>Scikit-Learn</li>
+										<p>Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, Scikit-Learn</p> 									
+
 
 									</li>
 									<li>
