--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 								<ul class="features">
 									<li>
 									
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;"></a>
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project"><h3>The Good Dog Project</h3></a>a
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project">Visit GitHub Repository</a>
-										<p>Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, Scikit-Learn</p> 									
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;"></a>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><h3>The Good Dog Project</h3></a>a
+										<p>Multi-Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, and Scikit-Learn</p> 									
 
 
 									</li>
