--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
 										with discovering more through experience and projects. <br />
 									</p>
 									<h2> </h2>
-									<p><h3><b>Certifications:</b></h3></p>
+									<p><h3><b>Certifications:</b></h3>
+										<p><b>Pytorch</b><br />
+										Zero to Mastery</p>
+									<p><b>Tensorflow</b><br />
+										Zero to Mastery</p>										
 									<p><b>AI Machine Learning and Data Science</b><br />
 										Zero to Mastery</p>
 									<p><b>Python</b><br />
