--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Project #2</h3>
+										<a href=https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg
+										<h3>Heart Disease Project</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
