--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 									</li>
 									<li>
-										<a href=https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg
+										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" style="width: 2in;"></a>
 										<h3>Heart Disease Project</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
