--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1>Heather Blackwood</h1>
-						<p>Machine Learning  &nbsp &bull; &nbsp Data Analysis &nbsp &bull; &nbsp Experimentation<br />
+						<p>Machine Learning  &nbsp &bull; &nbsp Data Science &nbsp &bull; &nbsp Experimentation<br />
 						</p>
 					</header>
 
@@ -70,7 +70,7 @@
 
 									</li>
 									<li>
-										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" style="width: 2in;"></a>
+										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" width="2in" style="aspect-ratio: attr(width) / 1;">
 										<h3>Heart Disease Project</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
