--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 								<ul class="features">
 									<li>
 									
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;"></a>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
 										<br>
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><h3>The Good Dog Project</h3></a>
-										<p>Multi-Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, and Scikit-Learn</p> 									
+										<h3>The Good Dog Project</h3>
+										<p>Multi-Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, and Scikit-Learn</p> </a>									
 
 
 									</li>
