--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 									</li>
 									<li>
-										<img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" width="2in" style="aspect-ratio: attr(width) / 1;">
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
 										<h3>Heart Disease Project</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
