--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<li>
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
 										<h3>Heart Disease Project</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p></a>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
