--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p></a>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Project #3</h3>
+										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Talk%20Bubble%20Robot.jpg" alt="Robot with Talk Bubble" style="width: 2in;">
+
+										<h3>Large Language Model</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
