--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 									
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
 										<h3>The Good Dog Project</h3>
+										<p> Convolutional Neural Network &nbsp &bull; Deep Learning &nbsp &bull; Multi-Image Classification Model</p>	
 										<p>Multi-Image Classification using: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, and Scikit-Learn</p> </a>									
 
 
