--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>About Me</h2>
+											<center><h2>About Me</h2></center> 
 										</header>
 										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
 										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
