--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
 
 									</li>
 									<li>
-										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
+										<a href="https://github.com/hmblackwood/Heart_Disease_Project/blob/main/Heart_Disease_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
 										<h3>Heart Disease Project</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p></a>
+										<p>Linear Regression Model &nbsp &bull; Logistic regression &nbsp &bull; K Nearest Neighbors &nbsp &bull; Random Forest Classifier</p>
 									</li>
 									<li>
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Talk%20Bubble%20Robot.jpg" alt="Robot with Talk Bubble" style="width: 2in;">
 										<h3>Large Language Model</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Python Libraries Used: Scikit-Learn, NumPy, Pandas, Matplotlib, Seaborn</p> </a>	
 									</li>
 								</ul>
 								<footer class="major">
