--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 										<header class="major">
 											<center><h2>About Me</h2></center> 
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit ame t aliquam.</p>
+										<p>Machine learning engineer with experience designing, developing, and testing AI solutions. Expertise in machine learning algorithms and data analysis.  Extensive background in technical and medical writing.</p>
 										<ul class="actions">
 											</ul>
 									</div>
