--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 									
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Golden%20Retriever.jpg" alt="Golden Retriever" style="width: 2in;">
 										<h3>The Good Dog Project</h3>
-										<p> Convolutional Neural Network &nbsp &bull; Deep Learning &nbsp &bull; Multi-Image Classification Model</p>	
+										<p> &nbsp &bull; Convolutional Neural Network <br>
+											&nbsp &bull; Deep Learning <br>
+											&nbsp &bull; Multi-Image Classification Model</p>	
 										<p>Python Libraries Used: Tensorflow, Keras, NumPy, Matplotlib, Seaborn, Pandas, and Scikit-Learn</p> </a>									
 
 
@@ -71,12 +73,14 @@
 										<a href="https://github.com/hmblackwood/Heart_Disease_Project/blob/main/Heart_Disease_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
 										<h3>Heart Disease Project</h3>
 										<p>Linear Regression Model &nbsp &bull; Logistic regression &nbsp &bull; K Nearest Neighbors &nbsp &bull; Random Forest Classifier</p>
+										<p>Python Libraries Used: Scikit-Learn, NumPy, Pandas, Matplotlib, Seaborn</p>
+									
 									</li>
 									<li>
 										<a href="https://github.com/hmblackwood/The-Good-Dog-Project/blob/main/The_Good_Dog_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/Talk%20Bubble%20Robot.jpg" alt="Robot with Talk Bubble" style="width: 2in;">
 										<h3>Large Language Model</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-										<p>Python Libraries Used: Scikit-Learn, NumPy, Pandas, Matplotlib, Seaborn</p> </a>	
+										<p>Python Libraries Used: </p> </a>	
 									</li>
 								</ul>
 								<footer class="major">
