--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 									<li>
 										<a href="https://github.com/hmblackwood/Heart_Disease_Project/blob/main/Heart_Disease_Project.ipynb"><img src="https://raw.githubusercontent.com/hmblackwood/hmblackwood.github.io/refs/heads/main/images/heart%20puzzle.jpg" alt="Heart Disease Puzzle" style="width: 2in;">
 										<h3>Heart Disease Project</h3>
-										<p>Linear Regression Model &nbsp &bull; Logistic regression &nbsp &bull; K Nearest Neighbors &nbsp &bull; Random Forest Classifier</p>
+										<p>&nbsp &bull; Linear Regression Model &nbsp &bull; <br>
+										&nbsp &bull; Logistic regression <br>
+										&nbsp &bull; K Nearest Neighbors <br>
+										&nbsp &bull; Random Forest Classifier</p>
 										<p>Python Libraries Used: Scikit-Learn, NumPy, Pandas, Matplotlib, Seaborn</p>
 									
 									</li>
