--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Technical Skills</h2>
-									<p>From coding to researching my novels, my love of learning always <br />
+									<p>From data analytics to machine learning to researching my novels, my love of learning always <br />
 										drives me. I combine traditional learning through certifications <br />
 										with discovering more through experience and projects. <br />
 									</p>
