--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Technical Skills</h2>
+									<p>&nbsp &bull; Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.<br>
+									&nbsp &bull; Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors <br>
+									&nbsp &bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation <br>
+									&nbsp &bull; Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.<br />
+
+
+									
 									<p>From data analytics to machine learning to researching my novels, my love of learning always <br />
 										drives me. I combine traditional learning through certifications <br />
 										with discovering more through experience and projects. <br />
