--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Technical Skills</h2>
+									<div style="text-align: left;"> 
 									<p>&nbsp &bull; Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.<br>
-									&nbsp &bull; Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors <br>
-									&nbsp &bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation <br>
+									&nbsp &bull; Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors. <br>
+									&nbsp &bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation. <br>
 									&nbsp &bull; Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.<br />
+										</div>
 
 
 									
