--- a/index.html
+++ b/index.html
@@ -99,16 +99,15 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Technical Skills</h2>
-									<div style="text-align: left;"> 
-									<p>&nbsp &bull; Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.<br>
-									&nbsp &bull; Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors. <br>
-									&nbsp &bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation. <br>
-									&nbsp &bull; Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.<br />
-																		
-									<p>From data analytics to machine learning to researching my novels, my love of learning always <br />
-										drives me. I combine traditional learning through certifications <br />
-										with discovering more through experience and projects. <br />
-										</div>
+									<div style="text-align: left;">
+  <ul>
+    <li style="padding-left: 20px;">Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
+    <li style="padding-left: 20px;">Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
+    <li style="padding-left: 20px;">System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation.</li>
+    <li style="padding-left: 20px;">Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.</li>
+  </ul>
+  <p>From data analytics to machine learning to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</p>
+</div>
 									</p>
 									<h2> </h2>
 									<p><h3><b>Certifications:</b></h3>
