--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
 								<header class="major">
 									<h2>Technical Skills</h2>
 				
-</ul>
+<ul class="indented-list">
+            <li>Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
+            <li>Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
+            <li>System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation.</li>
+            <li>Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.</li>
+        </ul>
 
 
 
