--- a/index.html
+++ b/index.html
@@ -100,14 +100,38 @@
 								<header class="major">
 									<h2>Technical Skills</h2>
 				
-<ul class="indented-list">
-            <li>Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
-            <li>Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
-            <li>System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation.</li>
-            <li>Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.</li>
-        </ul>
+</ul>
 
+										<!DOCTYPE html>
+<html>
+<head>
+<style>
+.ml-list { /* Class for Machine Learning list */
+  list-style-type: disc; /* Ensures bullets are visible */
+}
 
+.ml-list li {
+  padding-left: 20px; /* Consistent indentation for most items */
+}
+
+.ml-list li.first-item { /* Special styling for the first item */
+  padding-left: 100px;
+}
+</style>
+</head>
+<body>
+
+<ul>
+  <li class="ml-list first-item">Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
+  <li class="ml-list">Algorithms including: Regression (Linear and Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
+  <li class="ml-list">System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation.</li>
+  <li class="ml-list">Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.</li>
+</ul>
+
+<p>From data analytics to machine learning to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</p>
+
+</body>
+</html>
 
 
 										
