added bulleted list of A, B, C

--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Technical Skills</h2>
+									<ul>
+    <li>bullet A</li>
+    <li>bullet B</li>
+    <li>bullet C</li>
+    <li>bullet D</li>
+</ul>
+									
 									<p>From coding to researching my novels, my love of learning always <br />
 										drives me. I combine traditional learning through certifications <br />
 										with discovering more through experience and projects. <br />
