changed bullet section text

--- a/index.html
+++ b/index.html
@@ -100,16 +100,12 @@
 								<header class="major">
 									<h2>Technical Skills</h2>
 									<ul>
-    <li>bullet A</li>
-    <li>bullet B</li>
-    <li>bullet C</li>
-    <li>bullet D</li>
+    <li>&bull; Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
+    <li>&bull; Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
+    <li>&bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation</li>
+    <li>From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</li>
 </ul>
 									
-									<p>From coding to researching my novels, my love of learning always <br />
-										drives me. I combine traditional learning through certifications <br />
-										with discovering more through experience and projects. <br />
-									</p>
 									<h2> </h2>
 									<p><h3><b>Certifications:</b></h3>
 										<p><b>Pytorch</b><br />
