added code for bullet list

--- a/index.html
+++ b/index.html
@@ -100,11 +100,18 @@
 								<header class="major">
 									<h2>Technical Skills</h2>
 									<ul>
-    <li>&bull; Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
-    <li>&bull; Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
-    <li>&bull; System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation</li>
-    <li>From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</li>
+   <style>
+  .indented-list {
+    margin-left: 2in;
+  }
+</style>
+<ul class="indented-list">
+  <li>Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
+  <li>Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
+  <li>System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation</li>
+  <li>From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</li>
 </ul>
+										
 									
 									<h2> </h2>
 									<p><h3><b>Certifications:</b></h3>
