left justified bullets and added right margin

--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
 								<header class="major">
 									<h2>Technical Skills</h2>
 									<ul>
-   <style>
+<style>
   .indented-list {
     margin-left: 2in;
+    margin-right: 2in;
+    text-align: left;
   }
 </style>
-<ul class="indented-list">
+										<ul class="indented-list">
   <li>Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
   <li>Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
   <li>System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation</li>
