--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
   <li>Designed machine learning models including supervised and unsupervised learning, image classification, natural language processing, multi-class and binary classification, and time series forecasting.</li>
   <li>Algorithms including: Regression (Linear, Logistic), Decision Trees, Naive Bayes, and K Nearest Neighbors.</li>
   <li>System design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation</li>
-  <li>From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.</li>
-</ul>
+											</ul>
+
+										</b><br />
+  From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.
 										
 									
 									<h2> </h2>
