from coding section format change

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 											</ul>
 
 										</b><br />
-  From coding to researching my novels, my love of learning always drives me. I combine traditional learning through certifications with discovering more through experience and projects.
+  From coding to researching my novels, my love of learning always drives me. 
+										</b>
+										I combine traditional learning through certifications with discovering more through experience and projects.
 										
 									
 									<h2> </h2>
