--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 											</ul>
 
 										</b><br />
-  From coding to researching my novels, my love of learning always drives me. 
+  From machine learning to researching my novels, my love of learning always drives me. 
 										</p>
 										I combine traditional learning through certifications with discovering more through experience and projects.
 										
