--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   }
 </style>
 										<ul class="indented-list">
-  <li>Designed machine learning models and used algorithms including Linear and Logistic Regression, decision trees such as Random Forest, Naive Bayes, K Nearest Neighbor, <br> Recurrent and Convolutional Neural Networks, deep learning, supervised and unsupervised learning, and cross-validation.</li>
+  <li>Designed machine learning models and used algorithms including Linear and Logistic Regression, decision trees such as Random Forest, Naive Bayes, K Nearest Neighbor, Recurrent and Convolutional Neural Networks, deep learning, supervised and unsupervised learning, and cross-validation.</li>
   <li>Performed system design, data cleaning, feature engineering, hyperparameter tuning, and model evaluation.</li>
   <li>Used Python libraries including Tensorflow, Pytorch, Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, and Keras.</li>
 											</ul>
