fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
 									<dl class="content">
 									
 										<dt>Phone: (805) 404-3591</dd>
-										<dt>Email: hmblackwood42@gmail.com</a></dd>
-										<dt>LinkedIn: https://www.linkedin.com/in/heather-blackwood-06b1189/</a></dd>
+										<dt>Email: hmblackwood42@gmail.com</dd>
+										<dt><a href="https://www.linkedin.com/in/heather-blackwood-06b1189/">My LinkedIn Profile</a>
+</dd>
 											
 
 									</dl>
