--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 									<dl class="content">
 									
 										<dt>Phone: (805) 404-3591</dd>
-										<dt><a href="mailto:hmblackwood42@gmail.com">Email: hmblackwood42@gmail.com</a>/dd>
+										<dt><a href="mailto:hmblackwood42@gmail.com">Email: hmblackwood42@gmail.com</a>
 										<dt><a href="https://www.linkedin.com/in/heather-blackwood-06b1189/">LinkedIn Profile</a>
 </dd>
 											
